qgis (1.5.0) UNRELEASED; urgency=low

  * new development version after 1.5 branch

 -- Jürgen E. Fischer <jef@norbit.de>  Mon, 28 Dec 2009 23:44:41 +0100

qgis (1.4.0) UNRELEASED; urgency=low

  * new development version after 1.3 branch
  * use templates for configuration for ABIs and distributions
  * policy updated to 3.8.3
  * remove README.Debian from libqgis-dev
  * add symbol files for shared libraries
  * shorten qgis.sh
  * add all python files in qgis' site-packages
  * add labeling plugin

 -- Jürgen E. Fischer <jef@norbit.de>  Tue, 17 Nov 2009 16:27:53 +0100

qgis (1.3.0) UNRELEASED; urgency=low

  * new upstream release
  * add analysis library and raster terrain analysis plugin
  * alternativly depend on libgdal1-1.6.0-grass
  * include CONTRIBUTORS, TRANSLATORS and DONORS
  * reverse order of libgdal1-*-grass dependencies

 -- Jürgen E. Fischer <jef@norbit.de>  Sat, 12 Sep 2009 22:09:18 +0200

qgis (1.2.0) UNRELEASED; urgency=low

  * new development version after 1.1 branch
  * add new build dependency to pyqt4-dev-tools
  * update SONAMEs to 1.2.0
  * add python dependency to qgis-plugin-grass-common
  * include osm provider and evis plugin

 -- Jürgen E. Fischer <jef@norbit.de>  Tue, 18 Aug 2009 08:20:18 +0200

qgis (1.1.0-5) UNRELEASED; urgency=low

  * rename {qgis,qgis_help}.man to {qgis,qgis_help}.1

 -- Jürgen E. Fischer <jef@norbit.de>  Tue, 21 Apr 2009 22:09:33 +0200

qgis (1.1.0-4) UNRELEASED; urgency=low

  * include oracle plugin

 -- Jürgen E. Fischer <jef@norbit.de>  Wed, 15 Apr 2009 22:32:27 +0200

qgis (1.1.0-3) UNRELEASED; urgency=low

  * include diagram overlays 

 -- Jürgen E. Fischer <jef@norbit.de>  Wed, 08 Apr 2009 16:30:57 +0200

qgis (1.1.0-2) UNRELEASED; urgency=low

  * change package names to reflect ABI (changes SONAME)

 -- Jürgen E. Fischer <jef@norbit.de>  Sun, 05 Apr 2009 12:34:38 +0200

qgis (1.1.0-1) UNRELEASED; urgency=low

  * allow build with GRASS 6.4rc3
