@@ -1,0 +1,11 @@
+#!/bin/sh
+
+if [ "$LD_LIBRARY_PATH" = "" ]; then
+	LD_LIBRARY_PATH=/usr/lib/{GRASS}/lib
+else
+	LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/{GRASS}/lib
+fi
+
+export LD_LIBRARY_PATH
+
+exec $0.bin "$@"
